--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/Fawateer.jpg" />
+    <link rel="icon" href="%PUBLIC_URL%/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Safaq App"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Fawateer.jpg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Logo.png" />
  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
  
